fixing overflow

--- a/css/site.styl
+++ b/css/site.styl
@@ -709,7 +709,7 @@ ul.archive
     margin: 40px 0;
     word-wrap: normal;
     padding: 20px;
-    overflow-x: scroll;
+    overflow-x: auto;
     border-radius: 2px;
     border-left: 3px;
     border-left-color: #bbb;
